// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModelTransformer with SQL data sources: should assign SSM permissions 1`] = `
Object {
  "Statement": Array [
    Object {
      "Action": Array [
        "logs:CreateLogGroup",
        "logs:CreateLogStream",
        "logs:PutLogEvents",
      ],
      "Effect": "Allow",
      "Resource": "arn:aws:logs:*:*:*",
    },
    Object {
      "Action": Array [
        "ssm:GetParameter",
        "ssm:GetParameters",
      ],
      "Effect": "Allow",
      "Resource": Array [
        "arn:aws:ssm:*:*:parameter/test/username",
        "arn:aws:ssm:*:*:parameter/test/password",
        "arn:aws:ssm:*:*:parameter/test/hostname",
        "arn:aws:ssm:*:*:parameter/test/databaseName",
        "arn:aws:ssm:*:*:parameter/test/port",
      ],
    },
  ],
  "Version": "2012-10-17",
}
`;

exports[`ModelTransformer with SQL data sources: should assign secrets manager permissions 1`] = `
Object {
  "Statement": Array [
    Object {
      "Action": Array [
        "logs:CreateLogGroup",
        "logs:CreateLogStream",
        "logs:PutLogEvents",
      ],
      "Effect": "Allow",
      "Resource": "arn:aws:logs:*:*:*",
    },
    Object {
      "Action": "secretsmanager:GetSecretValue",
      "Effect": "Allow",
      "Resource": "myfakearn",
    },
  ],
  "Version": "2012-10-17",
}
`;
